--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeFrontEnd/pom.xml
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeFrontEnd/pom.xml
@@ -3,14 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.2</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.greencoffee</groupId>
+	    <artifactId>GreencoffeeWebParent</artifactId>
+	    <version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.greencoffee</groupId>
+	
 	<artifactId>GreencoffeeFrontEnd</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>GreencoffeeFrontEnd</name>
 	<description>Front end web application</description>
 	<properties>
