--- a/GreencoffeeProject/GreencoffeeWebParent/pom.xml
+++ b/GreencoffeeProject/GreencoffeeWebParent/pom.xml
@@ -19,6 +19,7 @@
 	</properties>
 	<modules>
 		<module>GreencoffeeBackEnd</module>
+		<module>GreencoffeeFrontEnd</module>
 	</modules>
 	<dependencies>
 		<dependency>
