--- a/GreencoffeeProject/GreencoffeeCommon/pom.xml
+++ b/GreencoffeeProject/GreencoffeeCommon/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>GreencoffeeCommon</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>GreencoffeeCommon</name>
-	<description>common library</description>
+	<description>Common library</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -21,5 +21,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
