--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeFrontEnd/pom.xml
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeFrontEnd/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.greencoffee</groupId>
-	    <artifactId>GreencoffeeWebParent</artifactId>
+	    <artifactId>GreencoffeeCommon</artifactId>
 	    <version>0.0.1-SNAPSHOT</version>
 	</parent>
 	
