--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/bin/pom.xml
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/bin/pom.xml
@@ -3,19 +3,18 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.greencoffee</groupId>
-	    <artifactId>GreencoffeeWebParent</artifactId>
+	    <groupId>com.greencoffee</groupId>
+	    <artifactId>GreencoffeeCommon</artifactId>
 	    <version>0.0.1-SNAPSHOT</version>
 	</parent>
-	
-	<artifactId>GreencoffeeFrontEnd</artifactId>
-	<name>GreencoffeeFrontEnd</name>
-	<description>Front end web application</description>
+	<artifactId>GreencoffeeBackEnd</artifactId>
+	<name>GreencoffeeBackEnd</name>
+	<description>Back end Admin</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-
+		
 	</dependencies>
 
 	<build>
