--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/pom.xml
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-	    <groupId>com.greencoffee</groupId>
-	    <artifactId>GreencoffeeCommon</artifactId>
-	    <version>0.0.1-SNAPSHOT</version>
+	   <groupId>com.greencoffee</groupId>
+	   <artifactId>GreencoffeeWebParent</artifactId>
+	   <version>0.0.1-SNAPSHOT</version>	
 	</parent>
 	<artifactId>GreencoffeeBackEnd</artifactId>
 	<name>GreencoffeeBackEnd</name>
