--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/pom.xml
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/pom.xml
@@ -14,7 +14,12 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		
+
+	<dependency>
+		<groupId>com.greencoffee</groupId>
+		<artifactId>GreencoffeeCommon</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
 	</dependencies>
 
 	<build>
