--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/application.properties
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.password=2wsxZAQ@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.main.allow-bean-definition-overriding=true
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
